--- a/style.css
+++ b/style.css
@@ -15,17 +15,23 @@ header{
 .container{
   width: 80%;
   margin: 0 auto;
-  border: 1px solid white;
+  border: 1px solid black;
   height: 100%;
 
 }
 
+header h1{
+  color: white;
+}
 /* classi appoggio  */
 
 .tb{
   padding: 20px 0px;
 }
 
+.center{
+  text-align: center;
+}
 
 
 .nav_left, .nav_right{
@@ -34,29 +40,58 @@ header{
   border: 1px solid white;
   float: left;
 }
+
+.nav_left li, .nav_right li{
+  display: inline-block;
+  list-style-type: none;
+  line-height: 15px;
+
+}
 /*SECTION 2 SCUOLE  */
 
 .scuole{
-  background-color: orange;
+  background-color: rgb(250, 250, 250);
   width: 100%;
 }
 
 
 
-.trecol{
+/* COLONNE */
+
+.trecol, .piano{
   width: 100%;
-  background-color: red;
   height: 500px;
 }
 .colonna, .colonna2, .colonna3{
   float: left;
   width: 30%;
+  font-size: 20px;
   height: 500px;
-  /* border: 1px solid black; */
+  border: 1px solid black;
 }
 .colonna2{
   margin: 0% 5%;
 }
+
+.logocol{
+  height: 30%;
+  width: 50%;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+
+
+/*SEZIONE PIANO  */
+
+.cright, .cleft{
+  width: 50%;
+  height: 100%;
+  background-color: green;
+  float: left;
+  border: 1px solid black;
+}
+
+
 
 
 /* FOOTER */
