--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header h1{
 
 /* COLONNE */
 
-.trecol, .piano, .one, .realenglish{
+.trecol, .piano, .one, .realenglish, .tablet{
   width: 100%;
   height: 500px;
 }
@@ -81,7 +81,7 @@ header h1{
 }
 
 
-/*SEZIONE PIANO  */
+/*SEZIONE PIANO,ONE,REALENGLISH  */
 
 .blocco2, .blocco1{
   width: 50%;
@@ -96,6 +96,14 @@ header h1{
   background-color: white;
 }
 
+/*TABLET  */
+
+.container_tablet{
+  width: 40%;
+  height: 500px;
+  margin: 0 auto;
+  background-color: red;
+}
 
 
 /* FOOTER */
